--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ sidebar-avatar: /img/dongyv.jpg      # use absolute URL, seeing it's used in bot
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+ weibo_username:     qiubaiying
+#zhihu_username:     qiubaiying
+github_username:    dongyv
+#facebook_username:  baiying.qiu.7
+#jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
 
