--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sidebar-avatar: /img/dongyv.jpg      # use absolute URL, seeing it's used in bot
 
 # SNS settings
 RSS: false
- weibo_username:     qiubaiying
+#weibo_username:     qiubaiying
 #zhihu_username:     qiubaiying
 github_username:    dongyv
 #facebook_username:  baiying.qiu.7
